// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ColorsTableElement should render error message if isErrored is true 1`] = `
<table>
  <thead>
    <tr>
      <th>
        #
      </th>
      <th>
        Colors
      </th>
      <th>
        Primary
      </th>
    </tr>
  </thead>
  <tbody>
    <tr
      className="error"
    >
      <td
        colSpan={3}
      >
        There was an error while loading the colors.
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`ColorsTableElement should render loading message if until there is data 1`] = `
<table>
  <thead>
    <tr>
      <th>
        #
      </th>
      <th>
        Colors
      </th>
      <th>
        Primary
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td
        colSpan={3}
      >
        loading colors...
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`ColorsTableElement should render the table with the correct number of rows and cells 1`] = `
<table>
  <thead>
    <tr>
      <th>
        #
      </th>
      <th>
        Colors
      </th>
      <th>
        Primary
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        1
      </td>
      <td>
        <div
          className="color-cell active "
          onClick={[Function]}
          style={
            {
              "backgroundColor": "yellow",
              "border": "yellow 5px solid",
            }
          }
        />
      </td>
      <td>
        <div
          className="color-cell active primary"
          style={
            {
              "backgroundColor": "yellow",
              "border": "yellow 5px solid",
            }
          }
        />
      </td>
    </tr>
    <tr>
      <td>
        2
      </td>
      <td>
        <div
          className="color-cell  "
          onClick={[Function]}
          style={
            {
              "backgroundColor": "",
              "border": "red 5px solid",
            }
          }
        />
      </td>
      <td>
        <div
          className="color-cell active primary"
          style={
            {
              "backgroundColor": "red",
              "border": "red 5px solid",
            }
          }
        />
      </td>
    </tr>
  </tbody>
</table>
`;
